refactoring after check stage-3